# dialsys

./: .gitignore  Makefile  builddeb.sh  buildpkg.sh  buildrpm.sh
dial/: AUTHORS  DialList.c  DialMenu.c  Makefile.am  buildrpm.sh.in  config.h.in  configure.ac  dialsys.h  libdial.spec.in
dial/debian/: README.Debian  changelog.in  control.in  rules
dial/pkgconfig/: dial.pc.in
dial/src/: DialConfig.c  DialDisplay.c  DialList.c  DialMenu.c  dialsys.h
gauge/: Gauge.c  GaugeCairo.c  GaugeEntropy.c  GaugeGTK.c  GaugeHarddisk.c  GaugeIcon_small.xpm  GaugeNetwork.c  GaugeSensors.c  GaugeTide.c  GaugeWeather.c  Makefile.am  buildDate.h  builddeb.sh.in  buildpkg.sh.in  buildrpm.sh.in  config.h.in  configure.ac  gauge.desktop  gauge.spec.in  socket.c  uk.co.theknight.gauge.metainfo.xml
gauge/debian/: README.Debian  README.source  control.in  copyright  files  gauge.substvars
gauge/src/: Gauge.c  GaugeBattery.c  GaugeCPU.c  GaugeCairo.c  GaugeDisp.h  GaugeEntropy.c  GaugeGTK.c  GaugeHarddisk.c  GaugeIcon.xpm  GaugeIcon_small.xpm  GaugeMemory.c  GaugeMoon.c  GaugeNetwork.c  GaugePower.c  GaugeSensors.c  GaugeThermo.c  GaugeTide.c  GaugeWeather.c  GaugeWifi.c  socket.c  socket.h  socketC.c  socketC.h
libdial/: Makefile.am  builddeb.sh.in  buildpkg.sh.in  buildrpm.sh.in  configure.ac  libdial.spec.in
libdial/debian/: README.source  changelog.in  copyright  rules
libdial/src/: DialConfig.c  DialDisplay.c  DialList.c  DialMenu.c  dialsys.h  dialsys.h.in
tzclock/: Makefile.am  ParseZone.h  TzClockCairo.c  TzClockDisp.h  TzClockIcon.xpm  TzClockIcon_small.xpm  TzClockImage.c  buildDate.h  builddeb.sh.in  buildpkg.sh.in  buildrpm.sh.in  configure.ac  tzclock.appdata.xml  tzclock.desktop  tzclock.man  tzclock.spec.in  uk.co.theknight.timezone_clock.metainfo.xml
tzclock/debian/: README.source  changelog.in  control.in  copyright  files  tzclock.substvars
tzclock/src/: ParseZone.c  ParseZone.h  TimeZone.h  TzClock.c  TzClockCairo.c  TzClockDisp.h  TzClockIcon.xpm  TzClockIcon_small.xpm  TzClockImage.c  screenSize.c
